# bbc_news_etl_pipeline

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: cd-staging.yml  ci-feature.yaml  ci.yaml  lint_formatting.yml
.github/workflows/reusable/: lint_formatting.yml  unit_test.yml
api/clients.mongo_connector/: index.html
api/clients.postgress_connector/: index.html
api/clients.rabbitmq_connector/: index.html
architecture/components/: index.html
architecture/components_overview/: index.html
architecture/high_level_data_flow/: index.html
architecture/overview/: index.html
changelog/: index.html
cicd/: index.html
components/consumer/: index.html
components/monitoring/: index.html
components/producer/: index.html
components/rabbitmq/: index.html
components/storage/: index.html
configuration/: index.html
contributing/: index.html
deployment/docker/: index.html
deployment/k8s/: index.html
development/layout/: index.html
development/testing/: index.html
docs/: faq.md  index.md  installation.md  usage.md
docs/api/: clients.mongo_connector.md  clients.postgress_connector.md  clients.rabbitmq_connector.md
docs/api/mongo/: mongo_base.md  mongo_consumer_repository.md  mongo_producer_repository.md  mongo_work_generator_repository.md
docs/api/postgres/: postgress_base.md
docs/architecture/: components.md  components_overview.md  high_level_data_flow.md  overview.md
docs/cicd/: index.md
docs/components/: consumer.md  monitoring.md  producer.md  rabbitmq.md  storage.md
docs/configuration/: index.md
docs/deployment/: docker.md  k8s.md
docs/development/: contributing.md  deployment.md  layout.md  testing.md
docs/getting_started/: k8s_deployment.md  local_setup.md  prerequisites.md
docs/observability/: dashboards.md  logs.md  metrics.md
docs/scaling/: index.md
faq/: index.html
getting_started/k8s_deployment/: index.html
getting_started/local_setup/: index.html
getting_started/prerequisites/: index.html
observability/dashboards/: index.html
observability/logs/: index.html
observability/metrics/: index.html
scaling/: index.html
search/: search_index.json
src/clients/: mongo_connector.py  postgress_connector.py  rabbitmq_connector.py
src/components/: selenium_bot.py
src/entity/: config_entity.py
src/exception/: base.py  selenium_exceptions.py
src/logger/: logging_setup.py
src/utils/: __init__.py
tests/unit/: test_custom_exception.py  test_mongo_connector.py  test_postgress_connector.py  test_rabbitmq_connector.py  test_selenium_bot.py
(+12 files in other folders)
